changed all routes to REST schema
